Fixed footer on mobile.  Toggle hover/active color

--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,14 @@ body::-webkit-scrollbar {
     outline: none;
 }
 
+#navbar .navbar-toggler:hover {
+    color: #bd93f9
+}
+
+#navbar .navbar-toggler:active {
+    color: #50fa7b
+}
+
 #h {
     font-size: 28px;
     font-family: 'fira_codebold';
@@ -477,7 +485,6 @@ body::-webkit-scrollbar {
 
 /* Footer */
 #footer {
-    position: fixed;
     bottom: 0;
     width: 100%;
     padding-bottom: 5px;
@@ -502,6 +509,12 @@ body::-webkit-scrollbar {
 
 #footer small {
     font-size: 14px;
+}
+
+@media (min-width: 768px) and (orientation: portrait) {
+    #footer {
+        position: fixed;
+    }
 }
 
 @media (min-width: 992px) {
